# MultiLingualTicTacToe

./: .gitignore  README.md
C/: CMakeLists.txt
C/src/: main.c
Go/: go.mod
Go/src/: board.go  main.go
Linux_x64_NASM_Assembly/: CMakeLists.txt  TicTacToe.asm
Lua/: main.lua
NASM/: CMakeLists.txt
NASM/src/: main.asm  syscall.asm  system.asm
NASM/src/lib/: linux.asm  macos.asm
Rust/: Cargo.toml
Rust/src/: board.rs  main.rs
